# lab_4

./: main.py  pyproject.toml
templates/: hist1.html  index1.html
